--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -500,7 +500,7 @@
 
         <!-- 
         #BLOG
-        -->
+        
 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
@@ -572,7 +572,7 @@
 
 
 
-		<!-- 
+		
 		-----------------------------------------------
         #Gallery
 		-----------------------------------------------
@@ -705,9 +705,13 @@
 
             <p class="hero-text"> 
 			<span style="text-align:left">
+					12.09.2025 - Tekken 7
+					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch stream</u></a>
+          ~~~
+          <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
-
           <a href="../assets/pdf/street_fighter_3rd_strike_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>PDF Guide for SF3RD Strike</u></a> 
           ~~~
           <br>
@@ -725,7 +729,7 @@
 		  </div>
             
       </section>
-	  
+
     </article>
   </main>
 
@@ -934,9 +938,19 @@
         </p>
 
       </div>
+                  <a href="../assets/images/lahti_fgc_images/lahti_fgc.png" target="_blank">
+            	    <img src="../assets/images/lahti_fgc_images/lahti_fgc.png" width="10%" height="10%" loading="lazy"
+                  alt="Lahti FGC fighting game community's sticker art"
+                  title="Sticker art of Lahti FGC" style="margin-top:500px">
+                  </a>
     </div>
 
+
+
+
   </footer>
+
+
 
 
 
