--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -533,7 +533,7 @@
 
       <!-- 
       #BLOG
-      -->
+      
 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
@@ -604,7 +604,7 @@
 
 
 
-		<!-- 
+		
 		-----------------------------------------------
         #Gallery
 		-----------------------------------------------
@@ -737,6 +737,11 @@
 
             <p class="hero-text"> 
 			<span style="text-align:left">
+					12.09.2025 - Tekken 7
+					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
+					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
+          ~~~
+          <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 
@@ -966,6 +971,11 @@
         </p>
 
       </div>
+                  <a href="../assets/images/lahti_fgc_images/lahti_fgc.png" target="_blank">
+            	    <img src="../assets/images/lahti_fgc_images/lahti_fgc.png" width="10%" height="10%" loading="lazy"
+                  alt="Lahti FGC fighting game community's sticker art"
+                  title="Sticker art of Lahti FGC" style="margin-top:500px">
+                  </a>
     </div>
 
   </footer>
