--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -289,6 +289,38 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/1685750/Capcom_Fighting_Collection/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          Capcom Fighting Collection
+          </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/2400430/Capcom_Fighting_Collection_2/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          Capcom Fighting Collection 2
+          </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/2634890/MARVEL_vs_CAPCOM_Fighting_Collection_Arcade_Classics/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          MARVEL vs. CAPCOM Fighting Collection
+          </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/357190/ULTIMATE_MARVEL_VS_CAPCOM_3/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          ULTIMATE MARVEL VS. CAPCOM 3
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/838380/DEAD_OR_ALIVE_6/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
