--- a/en/fighting.html
+++ b/en/fighting.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tekken 7 Tournament</title>
+  <title>Vampire Savior Tournament</title>
 
   <!-- 
     - favicon
@@ -122,7 +122,7 @@
 
 	  
        <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('../assets/images/fighting-background4.jpg')">
+        style="background-image: url('../assets/images/fighting-background5.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -130,15 +130,13 @@
 
             <h1 class="h1 hero-title" style="font-size: 45px;">
 			
-              Fighting game tournament <span><img src="../assets/images/events_images/tekken7_logo.png" width="450" height="600" loading="lazy"
-                    class="img-cover"
-                  alt="Tekken 7 Tournament"
-                  title="Tekken 7"></span>
-              And casual gaming
+              Fighting game tournament <span><img src="../assets/images/events_images/vsav_logo.png"  loading="lazy"
+                  alt="Vampire Savior Tournament"
+                  title="Vampire Savior"></span>
             </h1>
 
             <p class="hero-text"><span>
-			Open tournament for new and experienced fighting game players to have fun. In addition, we have many PC setups, where you can play various games with and controller (including Boomerang Yu, Duck Game and Make Way). You don't need to bring anything (other than phone. You'll need that to get inside the event area). Event is also streamed in twitch, in the channel:
+			Open tournament for new and experienced fighting game players to have fun. We have many PC setups, where you can play with and controller. You don't need to bring anything (other than phone. You'll need that to get inside the event area). Event is also streamed in twitch, in the channel:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			<br>
 			Free for anybody over 15 years old to join in.
@@ -168,12 +166,14 @@
 			<br>
 			<br>
 
-            <a href="https://link.webropolsurveys.com/S/497117AB2DA7D511" target="_blank"> <button class="btn skewBg" style="color: black;">
-			Fill this form,  
+            <a href="https://challonge.com/tournaments/signup/YOsPKc0UtF#/signup/kh983y6ep19" target="_blank"> <button class="btn skewBg" style="color: black;">
+			If you're inteterest
+      <br>
+      in joining in as 
 			<br>
-			if you're inteterest in joining in
-			<br>
-			the fighting game tournament
+			a player, sign in here
+      <br>
+      (needs challonge account)
 			</button></a>
 
       </section>
@@ -282,12 +282,12 @@
           <br>
           17:00 Sign up for tournament ends
           <br>
-          17:15 Tournament starts
+          18:00 Tournament starts
 					<br>
 					<br>
 					~ Tournament game ~ 
 					<br>
-					Tekken 7
+					Vampire Savior
 					</span>
 					<span style="font-size: 12px; text-align:left">
           ~ Rules ~
@@ -295,19 +295,25 @@
           The tournament format is double elimination. If you lose once, you are not out of the tournament yet, but lose again and you are out of the tournament
           <br>
           <br>
+          Tournament will be played on Capcom Fighting Collection using the Japanese version on turbo 3
+          <br>
+          <br>
           The matches are ft2. This means that the first player to win 2 games out of 3 wins the set
           <br>
           <br>
-          All characters can be played
+          Oboro Bishamon character is banned
           <br>
           <br>
           After one match, the losing player can change characters. The winning player must play with the same character as in the last match
           <br>
           <br>
-          The map "random" is always selected
+          Fetus of God stage is banned due to being a different length than the other stages
           <br>
           <br>
-          Tournament controllers (xbox 360 style controllers, couple of PS4 controllers) are available for players, but you are of course welcome to bring your own controller. The only exception is a controller with built-in macro buttons
+          Built in Macro buttons in the collection for supers and specials are banned
+          <br>
+          <br>          
+          Tournament controllers (xbox 360 style controllers, couple of PS4 controllers) are available for players, but you are welcome to bring your own controller. The only exception is a controller with built-in macro buttons
           <br>
           <br>
           The winner of the tournament will face a strong opponent. If you lose, you will still get the prize money, but you will lose the bragging rights
@@ -315,6 +321,11 @@
 					<span style="text-align:left">
 					~ Last tournament bracket ~ 
 					<br>
+          12.09.2025 - Tekken 7
+					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch stream</u></a>
+          ~~~
+          <br>
           25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
           ~~~
@@ -326,7 +337,7 @@
 					31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
           <br>
-					Fighting Game tournament is made with the help of professional fighting game players, YaBoiSpades & JuusoDotExe (Tekken player)
+					Fighting Game tournament is made with the help of professional fighting game players, YaBoiSpades & JuusoDotExe
 			</span>
 			</p>
 		  </div>
@@ -385,9 +396,9 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="../assets/images/lahti_fgc_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
-                  alt="Yleis viilis Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
-                  title="Bros cookin"
+                  <img src="../assets/images/gallery_images/small/gallery-23.jpg" width="450" height="600" loading="lazy"
+                  alt="Tekken 7 Lahti Fisticuffs turnauksessa Lahden tiedepuiston aulassa"
+                  title="Tekken 7 tournament"
                     class="img-cover">
                 </figure>
               </div>
