--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tekken 7 turnaus</title>
+  <title>Vampire Savior turnaus</title>
 
   <!-- 
     - favicon
@@ -122,7 +122,7 @@
 
 	  
        <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('../assets/images/fighting-background4.jpg')">
+        style="background-image: url('../assets/images/fighting-background5.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -131,14 +131,13 @@
             <h1 class="h1 hero-title" style="font-size: 40px;">
 			
               
-             Taistelupeli turnaus <span><img src="../assets/images/events_images/tekken7_logo.png" width="450" height="600" loading="lazy"
-                    class="img-cover"
-                  alt="Tekken 7 Turnaus"
-                  title="Tekken 7"></span>
-             Ja rentoa pelaamista
+             Taistelupeli turnaus <span><img src="../assets/images/events_images/vsav_logo.png" loading="lazy"
+                  alt="Vampire Savior Turnaus"
+                  title="Vampire Savior"></span>
+             
             </h1>
             <p class="hero-text"><span>
-			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Sen lisäksi useita PC setup:eja, jossa voi pelata ohjaimilla monia pelejä (esim. Boomerang Yu, Duck Game and Make Way). Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataa twitchiin kanavalle:
+			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Useita PC setup:eja, jossa voi pelata ohjaimilla. Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataa twitchiin kanavalle:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			
 			<br>
@@ -169,12 +168,14 @@
 			<br>
 			<br>
 
-            <a href="https://link.webropolsurveys.com/S/BD90FC19884D2070" target="_blank"> <button class="btn skewBg" style="color: black;">
+            <a href="https://challonge.com/tournaments/signup/YOsPKc0UtF#/signup/kh983y6ep19" target="_blank"> <button class="btn skewBg" style="color: black;">
 			Jos olet kiinnostunut  
 			<br>
-			turnauksesta, täytä
+			turnauksesta, liity
 			<br>
-			tämä lomake
+			tästä pelaajana
+      <br>
+      (tarvitsee challonge tilin)
 			</button></a>
 
       </section>
@@ -289,12 +290,12 @@
           <br>
           17:00 Ilmottautumiset turnaukseen loppuu
           <br>
-          17:15 Turnaus alkaa
+          18:00 Turnaus alkaa
 					<br>
 					<br>
 					~ Turnauksen peli ~ 
 					<br>
-					Tekken 7
+					Vampire Savior
 					</span>
 					<span style="font-size: 12px; text-align:left">
           ~ Säännöt ~
@@ -302,19 +303,25 @@
           Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
           <br>
           <br>
+          Turnaus pelataan Capcom Fighting Collectionilla käyttäen japaninkielistä versiota Turbo 3:lla
+          <br>
+          <br>
           Matsit ovat ft2. Tämä tarkoittaa että 3 pelistä ensimmäinen joka voittaa 2 peliä, voittaa setin
           <br>
           <br>
-          Kaikilla hahmoilla voi pelata
+          Oboro Bishamon -hahmoa ei saa valita
           <br>
           <br>
           Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittaneen pelaajan pitää pelata samalla hahmolla kuin viime matsissa
           <br>
           <br>
-          Map on aina "random" valinnan kautta
+          Fetus of God -kenttää ei saa käyttää, koska se on eri pituinen kuin muut kentät
           <br>
           <br>
-          Pelaajille on käytettävissä turnauksen ohjaimia (xbox 360 tyylin ohjaimia, pari PS4 ohjainta), mutta voit tietysti tuoda oman ohjaimen. Ainoa poikkeus on ohjain, jossa on sisäänrakennetut makropainikkeet
+          Kokoelman sisäänrakennetut makropainikkeet super- ja erikoistoiminnoille on kielletty
+          <br>
+          <br>  
+          Pelaajille on käytettävissä turnauksen ohjaimia (xbox 360 tyylin ohjaimia, pari PS4 ohjainta), mutta voit tuoda oman ohjaimen. Ainoa poikkeus on ohjain, jossa on sisäänrakennetut makropainikkeet
           <br>
           <br>
           Turnauksen voittaja kohtaa vahvan vastustaja. Jos häviät, saat silti palkintorahat, mutta menetät kehumisoikeudet
@@ -322,6 +329,11 @@
 					<span style="text-align:left">
 					~ Viime turnauksen haarukointi ~ 
 					<br>
+					12.09.2025 - Tekken 7
+					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
+					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
+          ~~~
+          <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
           ~~~
@@ -333,7 +345,7 @@
 					31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>    
 					<br>
-					Taistelupeli-turnaus on tehty ammattilais taistelupelaajien avustamana, YaBoiSpades & JuusoDotExe (Tekkenisti)
+					Taistelupeli-turnaus on tehty ammattilais taistelupelaajien avustamana, YaBoiSpades & JuusoDotExe
 			</span>
 			</p>
 		  </div>
@@ -391,9 +403,9 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="../assets/images/lahti_fgc_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
-                  alt="Yleis viilis Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
-                  title="Bros cookin"
+                  <img src="../assets/images/gallery_images/small/gallery-23.jpg" width="450" height="600" loading="lazy"
+                  alt="Tekken 7 Lahti Fisticuffs turnauksessa Lahden tiedepuiston aulassa"
+                  title="Tekken 7 turnaus"
                     class="img-cover">
                 </figure>
               </div>
