--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -128,7 +128,9 @@
 
           <div class="hero-content">
 
-            <img src="../assets/images/lahti_fgc_images/logo.png" width="450" height="600" loading="lazy"
+            <img src="../assets/images/lahti_fgc_images/lahti_fgc_logo.png" width="450" height="600" loading="lazy"
+                  alt="Funz tekemä Lahti FGC logo. Bro just made it without asking for it"
+                  title="Lahti FGC logo"
                     class="img-cover">
 
 			<h2 class="h2 hero-title-a2" style="margin-bottom:0px">
