--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -131,13 +131,13 @@
             <h1 class="h1 hero-title" style="font-size: 40px;">
 			
               
-             Taistelupeli turnaus <span><img src="../assets/images/events_images/vsav_logo.png" loading="lazy"
+             Taistelupeliturnaus <span><img src="../assets/images/events_images/vsav_logo.png" loading="lazy"
                   alt="Vampire Savior Turnaus"
                   title="Vampire Savior"></span>
              
             </h1>
             <p class="hero-text"><span>
-			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Useita PC setup:eja, jossa voi pelata ohjaimilla. Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataa twitchiin kanavalle:
+			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Useita PC setup:eja, joissa voi pelata ohjaimilla. Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataan twitchiin kanavalle:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			
 			<br>
@@ -179,6 +179,7 @@
 			</button></a>
 
       </section>
+        		<!--
 	  	<br>
 		<br>
 		<br>
@@ -195,7 +196,7 @@
 
 	</section>
 
-  		<!--
+
 		-----------------------------------------------
         #Guide for arriving part 1
 		-----------------------------------------------
