Added info to Lahti FGC
Added 2XKO and UNDER NIGHT IN-BIRTH Exe:Late[cl-r] to "LahtiFGC" sites

--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -68,7 +68,6 @@
 			      <li class="navbar-item">
             <a href="videogames.html" class="navbar-link skewBg2" data-nav-link>Video games club</a>
             </li>
-
             <!--
             <li class="navbar-item">
                   <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
@@ -268,6 +267,11 @@
         Clicking them takes you to their steam page
         </a>
         <br>
+          <a href="https://2xko.riotgames.com/en-us/" 
+          class="highlight-text" target="_blank" style="margin-bottom:-15px">
+          2XKO
+          </a>
+          <br>
           <a href="https://store.steampowered.com/app/586140/BlazBlue_Centralfiction/" 
           class="highlight-text" target="_blank" style="margin-bottom:-15px">
           BlazBlue Centralfiction (+ JUBEI)
@@ -511,6 +515,14 @@
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Tekken 7 (+ DLC)
+			    </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/801630/UNDER_NIGHT_INBIRTH_ExeLateclr/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          UNDER NIGHT IN-BIRTH Exe:Late[cl-r]
 			    </a>
           <br>
           <a href=
