--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -301,6 +301,11 @@
         Pelien klikkaaminen vie sinut niiden steam sivuille
 </a>
 <br>
+          <a href="https://2xko.riotgames.com/en-us/" 
+          class="highlight-text" target="_blank" style="margin-bottom:-15px">
+          2XKO
+          </a>
+          <br>
           <a href="https://store.steampowered.com/app/586140/BlazBlue_Centralfiction/" 
           class="highlight-text" target="_blank" style="margin-bottom:-15px">
           BlazBlue Centralfiction (+ JUBEI)
@@ -544,6 +549,14 @@
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Tekken 7 (+ DLC)
+			    </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/801630/UNDER_NIGHT_INBIRTH_ExeLateclr/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          UNDER NIGHT IN-BIRTH Exe:Late[cl-r]
 			    </a>
           <br>
           <a href=
