--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -519,14 +519,6 @@
           <br>
           <a href=
           "
-          https://store.steampowered.com/app/801630/UNDER_NIGHT_INBIRTH_ExeLateclr/
-          " 
-          target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          UNDER NIGHT IN-BIRTH Exe:Late[cl-r]
-			    </a>
-          <br>
-          <a href=
-          "
           https://store.steampowered.com/app/2076010/UNDER_NIGHT_INBIRTH_II_SysCeles/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -546,7 +538,7 @@
 
         <!-- 
         #BLOG
-        -->
+
 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
@@ -618,7 +610,7 @@
 
 
 
-		<!--
+
 		-----------------------------------------------
         #Gallery
 		-----------------------------------------------
@@ -751,9 +743,15 @@
 
             <p class="hero-text"> 
 			<span style="text-align:left">
+          24.10.2025 - Vampire Savior
+					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+					<a href="https://www.twitch.tv/videos/2600071846" target="_blank" style="color: DodgerBlue;"><u>Twitch stream</u></a>
+          ~~~
+          <br>
 					12.09.2025 - Tekken 7
 					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
 					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch stream</u></a>
+          <a href="https://www.instagram.com/p/DOmz7oIiklO/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					25.04.2025 - Street Fighter 3rd Strike
