--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -553,14 +553,6 @@
           <br>
           <a href=
           "
-          https://store.steampowered.com/app/801630/UNDER_NIGHT_INBIRTH_ExeLateclr/
-          " 
-          target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          UNDER NIGHT IN-BIRTH Exe:Late[cl-r]
-			    </a>
-          <br>
-          <a href=
-          "
           https://store.steampowered.com/app/2076010/UNDER_NIGHT_INBIRTH_II_SysCeles/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -580,7 +572,7 @@
 
       <!-- 
       #BLOG
-      -->
+
 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
@@ -651,7 +643,7 @@
 
 
 
-		<!--
+
 		-----------------------------------------------
         #Gallery
 		-----------------------------------------------
@@ -784,9 +776,15 @@
 
             <p class="hero-text"> 
 			<span style="text-align:left">
+        	24.10.2025 - Vampire Savior
+					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
+					<a href="https://www.twitch.tv/videos/2600071846" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
+          ~~~
+          <br>
 					12.09.2025 - Tekken 7
 					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
+          <a href="https://www.instagram.com/p/DOmz7oIiklO/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
           ~~~
           <br>
 					25.04.2025 - Street Fighter 3rd Strike
