--- a/en/home.html
+++ b/en/home.html
@@ -230,7 +230,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Sundays @ 16:00</div>
+                    <div class="card-badge skewBg">Sundays @ 14:00 - 17:30</div>
 
                     
 
