--- a/fi/index.html
+++ b/fi/index.html
@@ -236,7 +236,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Sunnuntaina @ 16:00</div>
+                    <div class="card-badge skewBg">Sunnuntaina @ 14:00 - 17:30</div>
 
                     <h3 class="h3">
                       <div class="card-title">Lahti FGC<br><br><span class="span">Taistelupeliyhteisö</span></div>
