--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -746,12 +746,13 @@
           24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
 					<a href="https://www.twitch.tv/videos/2600071846" target="_blank" style="color: DodgerBlue;"><u>Twitch stream</u></a>
+          <a href="https://www.instagram.com/p/DQVH4rMDHLz/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					12.09.2025 - Tekken 7
 					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
 					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch stream</u></a>
-          <a href="https://www.instagram.com/p/DOmz7oIiklO/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
+          <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					25.04.2025 - Street Fighter 3rd Strike
