--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -351,6 +351,14 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/871200/FIGHTING_EX_LAYER/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          FIGHTING EX LAYER (+ "Terry" character)
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/366240/GAROU_MARK_OF_THE_WOLVES/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -522,7 +530,7 @@
           https://store.steampowered.com/app/2076010/UNDER_NIGHT_INBIRTH_II_SysCeles/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          UNDER NIGHT IN-BIRTH II Sys:Celes
+          UNDER NIGHT IN-BIRTH II Sys:Celes (+ DLC)
 			    </a>
           <br>
           <a style="margin-bottom:-15px">
