--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -385,6 +385,14 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/871200/FIGHTING_EX_LAYER/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          FIGHTING EX LAYER (+ "Terry" hahmo)
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/366240/GAROU_MARK_OF_THE_WOLVES/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -556,7 +564,7 @@
           https://store.steampowered.com/app/2076010/UNDER_NIGHT_INBIRTH_II_SysCeles/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          UNDER NIGHT IN-BIRTH II Sys:Celes
+          UNDER NIGHT IN-BIRTH II Sys:Celes (+ DLC)
 			    </a>
           <br>
           <a style="margin-bottom:-15px">
@@ -779,7 +787,7 @@
         	24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 					<a href="https://www.twitch.tv/videos/2600071846" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
-          <a href="https://www.instagram.com/p/DQVH4rMDHLz/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
+          <a href="q" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
           ~~~
           <br>
 					12.09.2025 - Tekken 7
