--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -786,13 +786,13 @@
 			<span style="text-align:left">
         	24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
-					<a href="https://www.twitch.tv/videos/2600071846" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
+					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue;"><u>Editoitu streemi youtubessa</u></a>
           <a href="q" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
           ~~~
           <br>
 					12.09.2025 - Tekken 7
 					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
-					<a href="https://www.twitch.tv/videos/2564534216" target="_blank" style="color: DodgerBlue;"><u>Twitch streemi</u></a>
+					<a href="https://www.youtube.com/watch?v=LLHLs1lGuPo" target="_blank" style="color: DodgerBlue;"><u>Editoitu streemi youtubessa</u></a>
           <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
           ~~~
           <br>
