--- a/en/fighting.html
+++ b/en/fighting.html
@@ -277,16 +277,16 @@
             <p class="hero-text"> 
 			<span style="text-align:left">
 					~ Location ~ <br>
-          3 places in the Saima6 front yard
           Saima6<br>
           Saimaankatu 6, 15100 Lahti<br>
 					<a href="https://maps.app.goo.gl/tHB5NJztMtGcX6bK6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google Maps</u></a>
 					<br>
 
-                  ~ Parking ~<br>
-        Before 4 pm <a href="https://maps.app.goo.gl/4hjX1k54Gp8urh6J6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Ursankatu</u></a>
-        After 4 pm <br>
-        Paid parking ends at 4 pm, so anywhere<br><br>
+          ~ Parking ~<br>
+          3 places in the Saima6 front yard <br>
+          Before 4 pm <a href="https://maps.app.goo.gl/4hjX1k54Gp8urh6J6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Ursankatu</u></a>
+          After 4 pm <br>
+          Paid parking ends at 4 pm, so anywhere<br><br>
 
 					~ Time ~ <br>
 					27.12.2025 Saturday @ 14:00 - 22:00
