--- a/en/fighting.html
+++ b/en/fighting.html
@@ -313,7 +313,7 @@
           The loser of a match can change their character, meanwhile the winner has to stay on their chosen character
           <br>
           <br>
-          Built in Macro buttons in the collection for supers and specials are banned
+          Simple/basic mode for inputs is banned
           <br>
           <br>
           Tournament controllers (xbox 360 style controllers & PS4 controllers) are available for players, but you are welcome to bring your own controller. The only exception is a controller with built-in macro buttons
