--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -319,7 +319,7 @@
           Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittaneen pelaajan pitää pelata samalla hahmolla kuin viime matsissa
           <br>
           <br>
-          Sisäänrakennetut makropainikkeet super- ja erikoistoiminnoille ovat kiellettyjä.
+          Liikeiden inputtien yksinkertainen tila on kielletty
           <br>
           <br>
           Pelaajille on käytettävissä turnauksen ohjaimia (xbox 360 tyylin ohjaimia, pari PS4 ohjainta), mutta voit tuoda oman ohjaimen. Ainoa poikkeus on ohjain, jossa on sisäänrakennetut makropainikkeet
