--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -138,7 +138,7 @@
              
             </h1>
             <p class="hero-text"><span>
-			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Useita PC setup:eja, joissa voi pelata ohjaimilla. Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataan twitchiin kanavalle:
+			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Useita PC setup:eja, joissa voi pelata ohjaimilla. Ei tarvitse tuoda itse mitään mukaan. Tapahtuma myös streemataan twitchiin kanavalle:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			
 			<br>
