--- a/en/fighting.html
+++ b/en/fighting.html
@@ -136,7 +136,7 @@
             </h1>
 
             <p class="hero-text"><span>
-			Open tournament for new and experienced fighting game players to have fun. We have many PC setups, where you can play with and controller. You don't need to bring anything (other than phone. You'll need that to get inside the event area). Event is also streamed in twitch, in the channel:
+			Open tournament for new and experienced fighting game players to have fun. We have many PC setups, where you can play with and controller. You don't need to bring anything. Event is also streamed in twitch, in the channel:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			<br>
 			Free for anybody over 12 years old to join in.
