--- a/en/fighting.html
+++ b/en/fighting.html
@@ -306,8 +306,7 @@
           The tournament is run on the double elimination format
           <br>
           <br>
-          Matches are best of 3. Top 4 matches are best of 5
-          (Winners Finals, Losers Semis, Losers Finals, Grand Finals)
+          Matches are best of 5 (ft3)
           <br>
           <br>
           The loser of a match can change their character, meanwhile the winner has to stay on their chosen character
