--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -312,8 +312,7 @@
           Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
           <br>
           <br>
-          Ottelut pelataan paras kolmesta. Top 4 ottelut pelataan paras viidestä.
-          (Voittajien finaalit, häviäjien semifinaalit, häviäjien finaalit, grand finaalit)
+          Ottelut pelataan paras viidestä (ft3)
           <br>
           <br>
           Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittaneen pelaajan pitää pelata samalla hahmolla kuin viime matsissa
