--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -312,7 +312,7 @@
           Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
           <br>
           <br>
-          Ottelut pelataan paras viidestä (ft3)
+          Matsit ovat "paras viidestä" (ft3)
           <br>
           <br>
           Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittaneen pelaajan pitää pelata samalla hahmolla kuin viime matsissa
