--- a/en/fetch.html
+++ b/en/fetch.html
@@ -228,7 +228,10 @@
           if (!urlParts[1]) return null;
 
           const appId = urlParts[1].replace('/', '');
-          const response = await fetch(`https://store.steampowered.com/app/${appId}`);
+          const steamUrl = `https://store.steampowered.com/app/${appId}`;
+          const corsProxy = `https://cors-anywhere.herokuapp.com/`;
+
+          const response = await fetch(corsProxy + steamUrl);
           const html = await response.text();
 
           const storageMatch = html.match(/(?:Storage|Hard Drive|HD space):\s*(\d+(?:\.\d+)?)\s*(GB|MB)/i);
